# python-practice

./: .gitignore
python-practice/: LICENSE.txt
python-practice/composition_over_inheritance/: test.py
python-practice/gists/: tree_constructors.py
python-practice/pdb/: example_usage.py
python-practice/project-euler/problem_eighteen/: euler_types.py  helpers.py  main.py
python-practice/project-euler/problem_eleven/: new_main.py  test.py
python-practice/project-euler/problem_fifteen/: main.py
python-practice/project-euler/problem_fourteen/: main.py
python-practice/project-euler/problem_nine/: main.py
python-practice/project-euler/problem_nineteen/: main.py  test.py
python-practice/project-euler/problem_seventeen/: README.md  main.py
python-practice/project-euler/problem_seventyfive/: pyproject.toml
python-practice/project-euler/problem_seventyfive/problem_seventyfive/: main.py
python-practice/project-euler/problem_seventyfive/tests/: test_problem_seventyfive.py
python-practice/project-euler/problem_sixteen/: main.py
python-practice/project-euler/problem_thirteen/: main.py
python-practice/project-euler/problem_thirty/: test_thirty.py  thirty.py
python-practice/project-euler/problem_thirtyone/: .solution.py.swp  solution.py
python-practice/project-euler/problem_thirtythree/: solution.py
python-practice/project-euler/problem_twentyseven/: README.md  better_solution.py  problem_twentyseven.py  pyproject.toml  test_main.py
python-practice/stack_implementation/: hello_world.py  stack.py
python-practice/stack_tests/: test_stack.py
(+148 files in other folders)
