[tool.poetry]
name = "problem_seventyfive"
version = "0.1.0"
description = ""
authors = ["Zachary Anglin <zachary@anglin.com>"]

[tool.poetry.dependencies]
python = "^3.7"
typer = "^0.3.2"
contexttimer = "^0.3.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
